@@ -1,7 +1,5 @@
 package io.jenkins.plugins.security.scan.service.scan.srm;
 
-import static org.junit.jupiter.api.Assertions.*;
-
 import hudson.EnvVars;
 import hudson.model.TaskListener;
 import io.jenkins.plugins.security.scan.global.ApplicationConstants;
@@ -10,13 +8,16 @@ import io.jenkins.plugins.security.scan.input.coverity.Coverity;
 import io.jenkins.plugins.security.scan.input.srm.SRM;
 import io.jenkins.plugins.security.scan.service.scan.blackducksca.BlackDuckSCAParametersService;
 import io.jenkins.plugins.security.scan.service.scan.coverity.CoverityParametersService;
-import java.io.PrintStream;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
+
+import java.io.PrintStream;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 public class SRMParametersServiceTest {
 
@@ -32,13 +33,13 @@ public class SRMParametersServiceTest {
     private final String TEST_SRM_ASSESSMENT_TYPES = "SCA";
     private final String TEST_SRM_BRANCH_NAME = "test-branch";
     private final String TEST_SRM_BRANCH_PARENT_NAME = "test-parent-branch";
-    private final String TEST_BLACKDUCK_ARGS = "--detect.diagnostic=true";
-    private final String TEST_BLACKDUCK_CONFIG_FILE_PATH = "DIR/CONFIG/application.properties";
+    private final String TEST_BLACKDUCKSCA_ARGS = "--detect.diagnostic=true";
+    private final String TEST_BLACKDUCKSCA_CONFIG_FILE_PATH = "DIR/CONFIG/application.properties";
     private final String TEST_COVERITY_CLEAN_COMMAND = "mvn clean";
     private final String TEST_COVERITY_BUILD_COMMAND = "mvn clean install";
     private final String TEST_COVERITY_ARGS = "-o capture.build.clean-command=\"mvn clean\" -- mvn clean install";
     private final String TEST_COVERITY_CONFIG_FILE_PATH = "DIR/CONFIG/coverity.yml";
-    private final String TEST_BLACKDUCK_EXECUTION_PATH = "/fake/path/bd";
+    private final String TEST_DETECT_EXECUTION_PATH = "/fake/path/bd";
     private final String TEST_COVERITY_EXECUTION_PATH = "/fake/path/cov";
 
     @BeforeEach
@@ -85,14 +86,14 @@ public class SRMParametersServiceTest {
         srmParameters.put(ApplicationConstants.SRM_ASSESSMENT_TYPES_KEY, TEST_SRM_ASSESSMENT_TYPES);
         srmParameters.put(ApplicationConstants.SRM_BRANCH_NAME_KEY, TEST_SRM_BRANCH_NAME);
         srmParameters.put(ApplicationConstants.SRM_BRANCH_PARENT_KEY, TEST_SRM_BRANCH_PARENT_NAME);
-        srmParameters.put(ApplicationConstants.BLACKDUCK_SEARCH_DEPTH_KEY, 2);
-        srmParameters.put(ApplicationConstants.BLACKDUCK_CONFIG_PATH_KEY, TEST_BLACKDUCK_CONFIG_FILE_PATH);
-        srmParameters.put(ApplicationConstants.BLACKDUCK_ARGS_KEY, TEST_BLACKDUCK_ARGS);
+        srmParameters.put(ApplicationConstants.BLACKDUCKSCA_SEARCH_DEPTH_KEY, 2);
+        srmParameters.put(ApplicationConstants.BLACKDUCKSCA_CONFIG_PATH_KEY, TEST_BLACKDUCKSCA_CONFIG_FILE_PATH);
+        srmParameters.put(ApplicationConstants.BLACKDUCKSCA_ARGS_KEY, TEST_BLACKDUCKSCA_ARGS);
         srmParameters.put(ApplicationConstants.COVERITY_BUILD_COMMAND_KEY, TEST_COVERITY_BUILD_COMMAND);
         srmParameters.put(ApplicationConstants.COVERITY_CLEAN_COMMAND_KEY, TEST_COVERITY_CLEAN_COMMAND);
         srmParameters.put(ApplicationConstants.COVERITY_CONFIG_PATH_KEY, TEST_COVERITY_CONFIG_FILE_PATH);
         srmParameters.put(ApplicationConstants.COVERITY_ARGS_KEY, TEST_COVERITY_ARGS);
-        srmParameters.put(ApplicationConstants.SRM_SCA_EXECUTION_PATH_KEY, TEST_BLACKDUCK_EXECUTION_PATH);
+        srmParameters.put(ApplicationConstants.SRM_SCA_DETECT_EXECUTION_PATH_KEY, TEST_DETECT_EXECUTION_PATH);
         srmParameters.put(ApplicationConstants.SRM_SAST_EXECUTION_PATH_KEY, TEST_COVERITY_EXECUTION_PATH);
 
         blackDuckSCAParametersService = new BlackDuckSCAParametersService(listenerMock, envVarsMock);
@@ -108,10 +109,10 @@ public class SRMParametersServiceTest {
         assertEquals(srm.getProject().getId(), TEST_SRM_PROJECT_ID);
         assertEquals(srm.getBranch().getName(), TEST_SRM_BRANCH_NAME);
         assertEquals(srm.getBranch().getParent(), TEST_SRM_BRANCH_PARENT_NAME);
-        assertEquals(srm.getAssessmentTypes().getTypes(), Arrays.asList(TEST_SRM_ASSESSMENT_TYPES));
+        assertEquals(srm.getAssessmentTypes().getTypes(), List.of(TEST_SRM_ASSESSMENT_TYPES));
         assertEquals(2, blackDuck.getSearch().getDepth());
-        assertEquals(TEST_BLACKDUCK_CONFIG_FILE_PATH, blackDuck.getConfig().getPath());
-        assertEquals(TEST_BLACKDUCK_ARGS, blackDuck.getArgs());
+        assertEquals(TEST_BLACKDUCKSCA_CONFIG_FILE_PATH, blackDuck.getConfig().getPath());
+        assertEquals(TEST_BLACKDUCKSCA_ARGS, blackDuck.getArgs());
         assertEquals(coverity.getBuild().getCommand(), TEST_COVERITY_BUILD_COMMAND);
         assertEquals(coverity.getClean().getCommand(), TEST_COVERITY_CLEAN_COMMAND);
         assertEquals(coverity.getConfig().getPath(), TEST_COVERITY_CONFIG_FILE_PATH);
